<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/measure_tapes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/app_name" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_femal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1" />

        <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2" />

        <RadioButton
            android:id="@+id/radio_button_undefined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_specified" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_text_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_text_height_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/m"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text" />

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23.6" />
</LinearLayout>